fix: changed scrollbar colors

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -85,7 +85,7 @@
         width: clamp(9em, 12vw, 11em);
         height: clamp(9em, 12vw, 11em);
         border-radius: 50%;
-        background: $--blue;
+        background: $--black;
         display: flex;
         color: $--white;
         justify-content: center;
